--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "allen-web",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "dataChunkPacName": "A Vue.js project",
   "author": "shawn <tangshuangpku@hotmail.com>",
   "private": true,
   "scripts": {
@@ -11,10 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
+    "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.2.1",
-    "axios": "^0.18.0"
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
